feat: finish mvp client logic

--- a/client/index.html
+++ b/client/index.html
@@ -7,23 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="poll">
-      <h1 class="poll__title">Esse ano sobe?</h1>
-      <div class="poll__option">
-        <div class="poll__option-fill"></div>
-        <div class="poll__option-info">
-          <span class="poll__label">Sim</span>
-          <span class="poll__percentage">90%</span>
-        </div>
-      </div>
-      <div class="poll__option poll__option--selected">
-        <div class="poll__option-fill"></div>
-        <div class="poll__option-info">
-          <span class="poll__label">Não</span>
-          <span class="poll__percentage">10%</span>
-        </div>
-      </div>
-    </div>
+    <div class="poll"></div>
     <script src="main.js" type="module"></script>
   </body>
 </html>
