--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <img src="../client/assets/tiger-sad.png" alt="illustration of cartoon tiger crying" class="tiger-img"/>
+    <h1 class="year"></h1>
+    <p class="description">se passaram desde que o Vila Nova disputou a série A.</p>
     <div class="poll"></div>
+    <a href="lucasalves.dev" class="portfolio">lucasalves.dev</a>
     <script src="main.js" type="module"></script>
   </body>
 </html>
