refactor: poll to enable graphs animations

--- a/client/index.html
+++ b/client/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="./assets/tiger-happy.png" />
+    <title>Vila na A</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vila na A</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
+  <body>
+    <img
+      src="../client/assets/tiger-sad-crop.png"
+      alt="illustration of cartoon tiger crying"
+      class="tiger-img"
+    />
+    <h1 class="year"></h1>
+    <p class="description">
+      se passaram desde que o Vila Nova disputou a série A.
+    </p>
+    <div class="poll"></div>
+    <a href="https://lucasalves.dev/" class="portfolio">lucasalves.dev</a>
 
-<body>
-  <img src="../client/assets/tiger-sad-crop.png" alt="illustration of cartoon tiger crying" class="tiger-img" />
-  <h1 class="year"></h1>
-  <p class="description">se passaram desde que o Vila Nova disputou a série A.</p>
-  <div class="poll"></div>
-  <a href="lucasalves.dev" class="portfolio">lucasalves.dev</a>
-
-  <script src="main.js" type="module"></script>
-</body>
-
+    <script src="main.js" type="module"></script>
+  </body>
 </html>
