feat: opens new tab when link is clicked

--- a/client/index.html
+++ b/client/index.html
@@ -19,7 +19,7 @@
       se passaram desde que o Vila Nova disputou a série A.
     </p>
     <div class="poll"></div>
-    <a href="https://lucasalves.dev/" class="portfolio">lucasalves.dev</a>
+    <a href="https://lucasalves.dev/" class="portfolio" target="_blank">lucasalves.dev</a>
 
     <script src="main.js" type="module"></script>
   </body>
