fix: images not loading

--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <img
-      src="../client/assets/tiger-sad-crop.png"
+      src="assets/tiger-sad-crop.png"
       alt="illustration of cartoon tiger crying"
       class="tiger-img"
     />
